--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
     <h1 id='nameLabel'>Hello Newbie!</h1>
   </div>
   <div id='console'></div>
-  <script src='script0.js'></script>
+  <script src='/main.js'></script>
 </body>
 </html>
