--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
   <title>Document</title>
 </head>
 <body>
-<input type="text" id="prompt" autocomplete="off" autocapitalize="on" autofocus="on">
-  <div class='container'>
-    <h1 id='nameLabel'>Hello Newbie!</h1>
-  </div>
+  <div id='mainDiv'>
+  <h1 id='nameLabel'>Hello Newbie!</h1><br>
+  <input type="text" id="prompt" autocomplete="off" autocapitalize="on" autofocus="on">
+  <div id="dropDownDiv"></div><br>
   <div id='console'></div>
-  <script src='/main.js'></script>
+  <script src='main.js'></script>
+  <div>
 </body>
 </html>
