--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 </head>
 <body>
   <div id='mainDiv'>
+  <p id='version'><b>Version: 2.0</b></p>
   <h1 id='nameLabel'>Hello Newbie!</h1><br>
-  <input type="text" id="prompt" autocomplete="off" autocapitalize="on" autofocus="on">
+  <input type="text" id="prompt" autocomplete="off" autocapitalize="on" autofocus="on" placeholder="Type command here..." >
   <div id="dropDownDiv"></div><br>
   <div id='console'></div>
   <script src='main.js'></script>
